...
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/Login"
...
